Fix zerotier-desktop-ui-git compile

--- a/repos/eeems-linux/zerotier-desktop-ui-git.yml
+++ b/repos/eeems-linux/zerotier-desktop-ui-git.yml
@@ -1,1 +1,2 @@
-
+script: |
+  sed -i 's`make official`echo "#include <strings.h>" | cat - libui-ng/unix/text.c | tee libui-ng/unix/text.c >/dev/null;echo "#include <sys/stat.h>" | cat - tray/zt_desktop_tray.c | tee tray/zt_desktop_tray.c >/dev/null;make official`' pkg/PKGBUILD
