--- a/repos/eeems-calc/knightos-sdk.yml
+++ b/repos/eeems-calc/knightos-sdk.yml
@@ -1,13 +1,13 @@
-- name: scas
-- name: genkfs
+#!- name: scas
+#!- name: genkfs
 #! - name: z80e
 #!   depends:
 #!     - scas
-- name: kpack-git
-- name: knightos-kcc
-  depends:
-    - scas
-- name: kimg
+#!- name: kpack-git
+#!- name: knightos-kcc
+#!  depends:
+#!    - scas
+#!- name: kimg
 - name: knightos-sass
 #!- name: knightos-sdk
 #!  depends:
@@ -18,3 +18,4 @@
 #!    - kpack-git
 #!    - scas
 #!    - z80e
+
