--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - main
   schedule:
-    - cron: '0 0 * * *'
+    - cron: "0 0 * * *"
   workflow_dispatch:
 jobs:
   setup:
@@ -20,8 +20,8 @@ jobs:
       - uses: actions/setup-python@v5
         continue-on-error: true
         with:
-          python-version: '3.11'
-          cache: 'pip'
+          python-version: "3.11"
+          cache: "pip"
       - run: pip install -r requirements.txt
       - name: Get image list
         id: images-matrix
@@ -61,8 +61,8 @@ jobs:
       - uses: actions/setup-python@v5
         continue-on-error: true
         with:
-          python-version: '3.11'
-          cache: 'pip'
+          python-version: "3.11"
+          cache: "pip"
       - run: pip install -r requirements.txt
       - uses: jpribyl/action-docker-layer-caching@v0.1.1
         if: ${{ matrix.runner != 'self-hosted' }}
@@ -97,8 +97,8 @@ jobs:
       - uses: actions/setup-python@v5
         continue-on-error: true
         with:
-          python-version: '3.11'
-          cache: 'pip'
+          python-version: "3.11"
+          cache: "pip"
       - run: pip install -r requirements.txt
       - name: Pacman cache
         uses: actions/cache@v3
@@ -170,8 +170,8 @@ jobs:
       - uses: actions/setup-python@v5
         continue-on-error: true
         with:
-          python-version: '3.11'
-          cache: 'pip'
+          python-version: "3.11"
+          cache: "pip"
       - run: pip install -r requirements.txt
       - uses: jpribyl/action-docker-layer-caching@v0.1.1
         if: ${{ matrix.runner != 'self-hosted' }}
@@ -194,7 +194,7 @@ jobs:
           if-no-files-found: error
   mirror0:
     name: Mirror0
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     if: success() || failure()
     needs: [repos]
     environment: repo.eeems.codes
@@ -206,9 +206,9 @@ jobs:
           server: ${{ vars.SSH_SERVER }}
           user: ${{ vars.SSH_USER }}
           path: ${{ vars.SSH_PATH }}
+          ssh: ${{ vars.SSH_ARGS }}
           key: ${{ secrets.SSH_KEY }}
           pat: ${{ secrets.CR_PAT }}
-          cache: false
   mirror1:
     name: Mirror1
     runs-on: ubuntu-latest
@@ -223,5 +223,6 @@ jobs:
           server: ${{ vars.SSH_SERVER }}
           user: ${{ vars.SSH_USER }}
           path: ${{ vars.SSH_PATH }}
+          ssh: ${{ vars.SSH_ARGS }}
           key: ${{ secrets.SSH_KEY }}
           pat: ${{ secrets.CR_PAT }}
