--- a/repos/eeems-linux/spotify.yml
+++ b/repos/eeems-linux/spotify.yml
@@ -1,3 +1,3 @@
 script: |
   curl -sS https://download.spotify.com/debian/pubkey_C85668DF69375001.gpg | gpg --import -
-  sed -i "/validpgpkeys=/s/')/' 'E1096BCBFF6D418796DE78515384CE82BA52C83A')/" pkg/PKGBUILD
+  sed -i /^validpgpkeys=/d' pkg/PKGBUILD
