--- a/repos/eeems-system76/system76-driver.yml
+++ b/repos/eeems-system76/system76-driver.yml
@@ -1,4 +1,4 @@
-- name: system76-dkms
+- name: system76-dkms-git
 - name: system76-io-dkms
 - name: system76-acpi-dkms
 - name: system76-oled
@@ -7,12 +7,12 @@
     sed -i "s|depends=\('dbus' 'systemd' 'system76-dkms'\)|depends=('dbus' 'systemd' 'system76-dkms' 'libusb')|" pkg/PKGBUILD
   depends:
     - system76-acpi-dkms
-    - system76-dkms
+    - system76-dkms-git
     - system76-io-dkms
 - name: system76-driver
   depends:
     - system76-acpi-dkms
-    - system76-dkms
+    - system76-dkms-git
     - system76-io-dkms
     - system76-oled
     - system76-power
